3B - Phase 5 - add Buyer 3B Coin

--- a/.gitignore
+++ b/.gitignore
@@ -3,4 +3,7 @@
 3B-WEB/assets/plugins/owl-carousel/owl.carousel.thumb.js
 
 3B-NEW/assets/base/base.css
+3B-NEW/assets/base/phase5.css
+3B-NEW/assets/base/phase5.sass
+3B-NEW/assets/base/phase5.css.map
 3B-NEW/assets/js/base.js
