--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,4 @@
-3B-WEB/assets/js/base.js
+#3B-WEB/assets/js/base.js
 3B-WEB/assets/base/base.css
 3B-WEB/assets/plugins/owl-carousel/owl.carousel.thumb.js
 
@@ -6,4 +6,4 @@
 3B-NEW/assets/base/phase5.css
 3B-NEW/assets/base/phase5.sass
 3B-NEW/assets/base/phase5.css.map
-3B-NEW/assets/js/base.js
+#3B-NEW/assets/js/base.js
