3B - NEW_DESIGN - HOME_MOBILE - add search result list store and product

--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,7 @@
 #3B-WEB/assets/js/base.js
 3B-WEB/assets/base/base.css
 3B-WEB/assets/plugins/owl-carousel/owl.carousel.thumb.js
+3B-WEB/assets/images/new-design/icons-png-cat/
 
 3B-NEW/assets/base/base.css
 3B-NEW/assets/base/phase5.css
