--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,7 @@
 3B-WEB/assets/base/base.css
 3B-WEB/assets/plugins/owl-carousel/owl.carousel.thumb.js
 3B-WEB/assets/images/new-design/icons-png-cat/
+3B-WEB/assets/images/new-design/icons_cat/png_32x32/
 
 3B-NEW/assets/base/base.css
 3B-NEW/assets/base/phase5.css
